--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
+    "electron-store": "^7.0.0",
     "node-sass": "^4.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
